xapian-bindings (0.9.5-3) unstable; urgency=low

  * PHP bindings packages now have the correct "Depends:" and are able to
    automatically modify php.ini upon installation (using debconf to ask if
    this should be done) and removal.
  * dh_python automatically generates the xapian-python->xapian-python2.X
    dependency for us, so remove the PYTHON_VERSION_MAIN mechanism (which
    wasn't actually being used anyway!)

 -- Olly Betts <olly@survex.com>  Wed, 12 Apr 2006 19:03:23 +0100

xapian-bindings (0.9.5-2) unstable; urgency=low

  * Added packages for PHP bindings (for both PHP4 and PHP5).
  * Don't install .py wrapper as executable (fixes Lintian warning).
  * dh_install with --fail-missing intead of just --list-missing.

 -- Olly Betts <olly@survex.com>  Sun,  9 Apr 2006 19:54:03 +0100

xapian-bindings (0.9.5-1) unstable; urgency=low

  * New upstream release.
  * "Standards-Version: 3.6.2" - no changes required.
  * debian/copyright: Update FSF address and give download URL for releases
    instead of obsolete CVS location.
  * debian/rules: When generating debian/control, die if the python package
    isn't installed (since we require it to discover the default python
    version).
  * debian/rules: Simplify configure invocation by taking advantage of the
    change to handling of --with-XXX options in 0.9.3.
  * debian/rules: Increase DH_COMPAT from 3 to 4.
  * debian/TODO: No point planning to package guile right now!
  * debian/rules: Generate bindings package for Python 2.1.
  * New maintainer.

 -- Olly Betts <olly@survex.com>  Sun,  9 Apr 2006 00:46:22 +0100

xapian-bindings (0.9.4-2) unstable; urgency=low

  * Fix invalid date line in previous changelog entry.

 -- Richard Boulton <richard@tartarus.org>  Fri,  3 Mar 2006 02:32:31 +0000

xapian-bindings (0.9.4-1) unstable; urgency=low

  * New upstream release.  (No package was made of 0.9.3)
  * Query constructor which takes a list of strings fixed.
  * Zero byte cleanliness.
  * Improved tests. 